<resources>
    <string name="app_name">Roll Companion</string>
    <string name="login">Login</string>
    <string name="appname">RollCompanion</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="signup">¿No estás registrado? Haz click aquí</string>
    <string name="credenciales">Recordar Credenciales</string>
    <string name="user">Usuario</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="otro">Otro</string>
    <string name="strength">Fuerza</string>
    <string name="dexterity">Destreza</string>
    <string name="constitution">Constitucion</string>
    <string name="intelligence">Intelligencia</string>
    <string name="wisdom">Sabiduria</string>
    <string name="charisma">Carisma</string>
    <string name="enviar">Enviar</string>
    <string name="nivel">Nivel</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="a_adir_correo">Añadir Correo</string>
    <string name="items">Items</string>
    <string name="equipamiento">Equipamiento</string>
    <string name="clases">Clases</string>
    <string name="razas">Razas</string>
    <string name="hechizos">Hechizos</string>
    <string name="abilidades">Abilidades</string>
    <string name="monstruos">Monstruos</string>
    <string name="manuales">Manuales</string>
    <string name="crea_tu_personaje">Crea tu personaje</string>
    <string name="clase">Clase</string>
    <string name="raza">Raza</string>
    <string name="atributos">Atributos</string>
    <string name="guardar_personaje">Guardar Personaje</string>
    <string name="buscar_personajes">Buscar Personajes</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="inte">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="desconectar_la_cuenta">Desconectar la cuenta</string>
    <string name="act_pass">Actualizar la contraseña de la centa</string>
    <string name="act_email">Actualizar el correo de la cuenta</string>
    <string name="act_name">Actualizar el nombre de usuario</string>
    <string name="act_dark_mode">Activar o desactivar modo oscuro</string>
    <string name="guardar_fecha">Guardar Fecha</string>
    <string name="siguiente_sesion">Siguiente Sesion:</string>
</resources>